--- a/SystemDoc.html
+++ b/SystemDoc.html
@@ -4,7 +4,7 @@
 <li><a href="/wiki/wiki/SecurityCriticalCode">Security-critical elements of Qubes OS</a></li>
 <li><a href="/wiki/wiki/GUIdocs">Qubes GUI virtualization protocol</a></li>
 <li><a href="/wiki/wiki/QubesNet">Networking in Qubes</a></li>
-<li><a href="/wiki/wiki/Qfilecopy">Inter-domain file coping</a></li>
+<li><a href="/wiki/wiki/Qfilecopy">Inter-domain file copying</a></li>
 <li><a href="/wiki/wiki/Qrexec">Command execution in VM (and Qubes RPC)</a></li>
 <li><a href="/wiki/wiki/Qmemman">Dynamic memory management in Qubes</a></li>
 <li><a href="/wiki/wiki/DVMimpl">Implementation of DisposableVMs</a></li>
