--- a/QubesBuilder.html
+++ b/QubesBuilder.html
@@ -62,7 +62,7 @@ make qubes
 make iso </code></pre>
 <p>And this should produce a shiny new ISO.</p>
 <p>You can also build selected component separately. Eg. to compile only gui virtualization agent/daemon:</p>
-<pre class="wiki"><code>make gui</code></pre>
+<pre class="wiki"><code>make gui-daemon</code></pre>
 <p>Full list you can get from make help. For advanced use and preparing sources for use with <a href="/wiki/wiki/QubesBuilder">QubesBuilder</a> take a look at <a href="/wiki/wiki/QubesBuilderDetails">QubesBuilderDetails</a> page.</p>
 <h2 id="Makingcustomizedbuild">Making customized build</h2>
 <h3 id="Manualsourcemodification">Manual source modification</h3>
