--- a/UserDoc.html
+++ b/UserDoc.html
@@ -26,7 +26,7 @@
 <li><a href="/wiki/wiki/AntiEvilMaid">Installing Anti Evil Maid</a></li>
 <li><a href="/wiki/wiki/UserDoc/TorVM">How to Install a Transparent Tor ProxyVM</a></li>
 <li><a href="/wiki/wiki/UserDoc/XFCE">XFCE Installation in dom0</a></li>
-<li><a href="/wiki/wiki/UserDoc/VMConfigFiles">VM customization?</a></li>
+<li><a href="/wiki/wiki/UserDoc/ConfigFiles">Configuration files</a></li>
 <li><a href="/wiki/wiki/UserDoc/DispVMCustomization">DispVM Customization</a></li>
 <li><a href="/wiki/wiki/LinuxHVMTips">Tips for Using Linux in an HVM</a></li>
 <li><a href="/wiki/wiki/FullScreenMode">Enabling Fullscreen Mode for AppVMs</a></li>
