--- a/HCL.html
+++ b/HCL.html
@@ -532,6 +532,15 @@
 <p>R2B3</p>
 <p>3.11.1-2</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/YcqMDcVYQh8/pk0B_9RfGQMJ">​Nukama</a></p>
+<p>Lenovo ThinkStation S30 4352G1G<br /> (E5-1620 v2, Ivytown, Radeon HD 6950)</p>
+<p>A2KT44AUS</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>*</p>
+<p>R2rc1</p>
+<p>3.12.14-4</p>
+<p>Issue with sound, network and marvel raid. AEM untested.</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/EDxALP9GNFo/gAH7nZXd0CkJ">​Hans Walter</a></p>
 <p><strong>Motherboards</strong></p>
 <p>ASRock G31M-GS<br /> (LGA775, G31, GMA3100)</p>
 <p>P1.90</p>
