--- a/UserDoc.html
+++ b/UserDoc.html
@@ -32,6 +32,8 @@
 <li><a href="/wiki/wiki/FullScreenMode">Enabling Fullscreen Mode for AppVMs</a></li>
 <li><a href="/wiki/wiki/UserDoc/OpenPGP">Using OpenPGP in Qubes</a></li>
 <li><a href="/wiki/wiki/ZFS">Installing ZFS in Qubes</a></li>
+<li><a href="/wiki/wiki/QubesService">Qubes service framework</a></li>
+<li><a href="/wiki/wiki/DiskTRIM">Enabling TRIM for SSD disks</a></li>
 </ul>
 <h2 id="Command-LineToolReferences">Command-Line Tool References</h2>
 <ul>
