--- a/HCL.html
+++ b/HCL.html
@@ -331,7 +331,7 @@
 <p>3.11.1-2</p>
 <p>activated VT-d BIOS option not recognized in Qubes</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/EoG4VffajRw/-oeSfNCA-KIJ">​Jens Porup</a></p>
-<p>Lenovo T510 (4384-WGZ)<br /> (i5-520M, Arrandale, Intel HD graphics)</p>
+<p>Lenovo Thinkpad T510 (4384-WGZ)<br /> (i5-520M, Arrandale, Intel HD graphics)</p>
 <p>1.52</p>
 <p>Yes</p>
 <p>Yes</p>
@@ -347,6 +347,14 @@
 <p>R1</p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/TgDWwBs36yA/IUFZPHs716cJ">​read more</a></p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/TgDWwBs36yA/IUFZPHs716cJ">​Sebastian Hültenschmidt</a></p>
+<p>Lenovo Thinkpad W530 (24385JU)<br /> (i7-3740QM, nVidia Optimus)</p>
+<p>2.53</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>R2rc1</p>
+<p>3.12.18-1</p>
+<p>display issues<a href="https://groups.google.com/d/msg/qubes-users/ReLqPcsvDwk/WbJdDUBqgTsJ">​read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/ReLqPcsvDwk/WbJdDUBqgTsJ">​Lab Man</a></p>
 <p>Lenovo Thinkpad X1 Carbon (3444CTO)<br /> (i5-3427U)</p>
 <p>Yes</p>
 <p>Yes</p>
@@ -400,6 +408,14 @@
 <p>R2B2</p>
 <p><a href="https://groups.google.com/d/topic/qubes-users/hf0vkL3TE7k/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/hf0vkL3TE7k/VOtrW3wEbtMJ">​mgflax</a></p>
+<p>Lenovo Thinkpad X230 (2306CTO)<br /> (i7-3520M, Ivy Bridge, HD Graphics)</p>
+<p>2.54</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>R2rc1</p>
+<p>3.12.14-4</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/NXIL5rEh65o/rCBf1PYr2jsJ">​read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/NXIL5rEh65o/rCBf1PYr2jsJ">​Franz Felix</a></p>
 <p>Samsung NP300E7A<br /> (i3-2330M, HM65, HD3000)</p>
 <p>P04ABJ</p>
 <p>Yes</p>
