--- a/UserDoc.html
+++ b/UserDoc.html
@@ -34,6 +34,7 @@
 <li><a href="/wiki/wiki/ZFS">Installing ZFS in Qubes</a></li>
 <li><a href="/wiki/wiki/QubesService">Qubes service framework</a></li>
 <li><a href="/wiki/wiki/DiskTRIM">Enabling TRIM for SSD disks</a></li>
+<li><a href="/wiki/wiki/DataLeaks">Understanding and Preventing Data Leaks</a></li>
 </ul>
 <h2 id="Command-LineToolReferences">Command-Line Tool References</h2>
 <ul>
