--- a/VPN.html
+++ b/VPN.html
@@ -18,9 +18,16 @@
 <p>To setup a ProxyVM as a VPN gateway you should:</p>
 <ul>
 <li>create a new VM and check the ProxyVM radiobutton</li>
-<li>add the network-manager service to this new VM</li>
-<li>strart the new ProxyVM and set up Your VPN as described in the Network Manager documentation linked above.</li>
-<li>connect your AppVMs to use the VPN service.</li>
 </ul>
+<p><a href="/wiki/attachment/wiki/VPN/Settings-NetVM.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;Settings-NetVM.png&quot; attached to VPN" alt="No image &quot;Settings-NetVM.png&quot; attached to VPN" /></a></p>
+<ul>
+<li>add the network-manager service to this new VM</li>
+</ul>
+<p><a href="/wiki/attachment/wiki/VPN/Settings-services.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;Settings-services.png&quot; attached to VPN" alt="No image &quot;Settings-services.png&quot; attached to VPN" /></a></p>
+<ul>
+<li>set up Your VPN as described in the Network Manager documentation linked above.</li>
+<li>connect your AppVMs to use the new VM as a NetVM.</li>
+</ul>
+<p><a href="/wiki/attachment/wiki/VPN/Settings-NetVM.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;Settings-NetVM.png&quot; attached to VPN" alt="No image &quot;Settings-NetVM.png&quot; attached to VPN" /></a></p>
 <h3 id="AppVM">AppVM</h3>
 <p>While the Network Manager is not started here (for a good reason) You can configure any kind of VPN client in your AppVM as well, however it is only suggested if you have to use a special VPN clinet.</p>
