--- a/VPN.html
+++ b/VPN.html
@@ -1,6 +1,5 @@
 <h2 id="VPNconnectionsinQubes">VPN connections in Qubes</h2>
-<p>The simplest case if you set up a VPN connection using the Network Manager inside one of your VMs. Setting up such a connection is really not Qubes specific and it is documented in Your Operating system documentation.</p>
-<p>If you using the Qubes default OS (Fedora): <a href="http://docs.fedoraproject.org/en-US/Fedora/18/html/System_Administrators_Guide/sec-Establishing_a_VPN_Connection.html">​Establishing a VPN Connection</a></p>
+<p>The simplest case if you set up a VPN connection using the Network Manager inside one of your VMs. Setting up such a connection is really not Qubes specific and it is documented in Your Operating system documentation. If you using the Qubes default Guest OS (Fedora): <a href="http://docs.fedoraproject.org/en-US/Fedora/18/html/System_Administrators_Guide/sec-Establishing_a_VPN_Connection.html">​Establishing a VPN Connection</a></p>
 <p>The Qubes specific part is choose the right VM for the VPN client:</p>
 <h3 id="NetVM">NetVM</h3>
 <p>The simplest case if you set up a VPN connection using the Network Manager inside your NetVM. Because the <a href="/wiki/wiki/NetworkManager">NetworkManager?</a> already started you are ready to set up your VPN connection. However this has some disadvantages:</p>
