--- a/VPN.html
+++ b/VPN.html
@@ -16,17 +16,18 @@
 </ul>
 <p><strong>To setup a ProxyVM as a VPN gateway you should:</strong></p>
 <ol>
+<li>check (<code>rpm -q  qubes-core-vm</code>) if you have the package <strong>qubes-core-vm</strong> version <strong>2.1.36</strong> (or later)</li>
 <li>create a new VM and check the ProxyVM radio button</li>
 </ol>
 <p><a href="/wiki/attachment/wiki/VPN/Create_New_VM.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;Create_New_VM.png&quot; attached to VPN" alt="No image &quot;Create_New_VM.png&quot; attached to VPN" /></a></p>
-<ol start="2">
+<ol start="3">
 <li>add the network-manager service to this new VM</li>
 </ol>
 <p><a href="/wiki/attachment/wiki/VPN/Settings-services.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;Settings-services.png&quot; attached to VPN" alt="No image &quot;Settings-services.png&quot; attached to VPN" /></a></p>
-<ol start="3">
+<ol start="4">
 <li>set up Your VPN as described in the Network Manager documentation linked above.</li>
 </ol>
-<ol start="4">
+<ol start="5">
 <li>connect your AppVMs to use the new VM as a NetVM.</li>
 </ol>
 <p><a href="/wiki/attachment/wiki/VPN/Settings-NetVM.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;Settings-NetVM.png&quot; attached to VPN" alt="No image &quot;Settings-NetVM.png&quot; attached to VPN" /></a></p>
