--- a/CopyPaste.html
+++ b/CopyPaste.html
@@ -28,7 +28,11 @@
 <li>Paste the data to <code>/var/run/qubes/qubes-clipboard.bin</code>, then write &quot;dom0&quot; to <code>/var/run/qubes/qubes-clipboard.bin.source</code>. Then use Ctrl-Shift-V to paste the data to the desired VM.</li>
 </ol>
 <h2 id="Clipboardautomaticpolicyenforcement">Clipboard automatic policy enforcement</h2>
-<p>TODO</p>
+<p>The Qubes clipboard policy is configurable in:</p>
+<pre class="wiki"><code>/etc/qubes-rpc/policy/qubes.ClipboardPaste</code></pre>
+<p>You may wish to configure this policy in order to prevent user error. For example, if you are certain that you never wish to paste <em>into</em> your &quot;vault&quot; AppVM, then you might edit the policy as follows:</p>
+<pre class="wiki"><code>$anyvm  vault   deny
+$anyvm  $anyvm  ask</code></pre>
 <h2 id="ShortcutConfiguration">Shortcut Configuration</h2>
 <p>The copy/paste shortcuts are configurable in:</p>
 <pre class="wiki"><code>/etc/qubes/guid.conf</code></pre>
