--- a/WindowsAppVms.html
+++ b/WindowsAppVms.html
@@ -13,6 +13,9 @@
 <h2 id="InstallingWindowsOSinaQubesVM">Installing Windows OS in a Qubes VM</h2>
 <p>Please refer to <a href="/wiki/wiki/HvmCreate">this page</a> for instructions on how to install Windows in a Qubes VM.</p>
 <h2 id="InstallingQubessupporttoolsinWindows7VMs">Installing Qubes support tools in Windows 7 VMs</h2>
+<p>First, make sure that <code>qubes-windows-tools</code> is installed in your system:</p>
+<pre class="wiki"><code>sudo qubes-dom0-update qubes-windows-tools</code></pre>
+<p>This package brings the ISO with Qubes Windows Tools that is passed to the VM when <code>--install-windows-tools</code> is specified for the <code>qvm-start</code> command. Please note that even though the Qubes Windows Tools are proprietary, none of this software ever runs in Dom0 or any other part of the system except for the Windows AppVM in which it is to be installed.</p>
 <p>To install the Qubes Windows support tools in a Windows VM one should start the VM passing the additional option <code>--install-windows-tools</code>:</p>
 <pre class="wiki"><code>qvm-start lab-win7 --install-windows-tools</code></pre>
 <p>Once the Windows VM boots, a CDROM should appear in the 'My Computer' menu (typically as <code>D:</code>) with a setup program in its main directory.</p>
