--- a/HCL.html
+++ b/HCL.html
@@ -416,6 +416,13 @@
 <p>3.12.14-4</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/NXIL5rEh65o/rCBf1PYr2jsJ">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/NXIL5rEh65o/rCBf1PYr2jsJ">​Franz Felix</a></p>
+<p>MSI GX660<br /> (i5-460M, PM55, Radeon HD5870)</p>
+<p>1.0L</p>
+<p>Yes</p>
+<p>No</p>
+<p>R2B3</p>
+<p>3.11.1-2</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/UrWYjkHwon8/TPE0XSBiPDQJ">​Avant Garden</a></p>
 <p>Samsung NP300E7A<br /> (i3-2330M, HM65, HD3000)</p>
 <p>P04ABJ</p>
 <p>Yes</p>
@@ -625,31 +632,30 @@
 <p>3.12.14-4</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/S4Ju0zDM2mI/Q4GZ4S2txdMJ">Fabian Lichte</a></p>
 <p>Gigabyte GA-FXA990-UD3 (rev 3.0)<br /> (AMD FX-8350, GTX 470)</p>
+<p>FB</p>
 <p>Yes</p>
-<p>No</p>
+<p>*</p>
+<p>*</p>
 <p>R2B2</p>
+<p>IOMMU not tested with Qubes, working on other platforms <a href="https://groups.google.com/d/msg/qubes-devel/qXct-TU4tKs/_JEtbQCyHl8J">read more</a>, TPM header</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/oox94EsIduQ/7w4xUoK5pxwJ">m astroj</a></p>
 <p>Gigabyte GA-X79S-UP5 Wi-Fi<br /> (LGA2011, C606)</p>
 <p>1.0</p>
 <p>Yes</p>
-<p>Yes</p>
-<p>VT-d option in BIOS according to <a href="http://download.gigabyte.eu/FileList/Manual/mb-manual_ga-x79s-up5_e.pdf">manual</a></p>
+<p>*</p>
+<p>*</p>
+<p>IOMMU not tested with Qubes, VT-d option in BIOS according to <a href="http://download.gigabyte.eu/FileList/Manual/mb-manual_ga-x79s-up5_e.pdf">manual</a>, TPM header</p>
 <p>MSI Big Bang<br /> (i7-950, Radeon HD 6770)</p>
 <p>R2B2</p>
 <p><a href="https://groups.google.com/d/topic/qubes-devel/TxzaoodB02o/discussion">read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/TxzaoodB02o/NxVHjaPoRYoJ">Andrew Sorensen</a></p>
-<p>MSI GX660<br /> (i5-460M, PM55, Radeon HD5870)</p>
-<p>1.0L</p>
-<p>Yes</p>
-<p>No</p>
-<p>R2B3</p>
-<p>3.11.1-2</p>
-<p><a href="https://groups.google.com/d/msg/qubes-users/UrWYjkHwon8/TPE0XSBiPDQJ">​Avant Garden</a></p>
 <p>Supermicro X10SAE<br /> (Xeon E3-1245, Haswell)</p>
 <p>1.0</p>
 <p>Yes</p>
 <p>Yes</p>
+<p>*</p>
 <p>R1</p>
+<p>TPM header</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/V9BLpdf4xCs/v4XcOjLT6uUJ">​Qubes Fan</a></p>
 <p>R2B2</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/V9BLpdf4xCs/v4XcOjLT6uUJ">​Qubes Fan</a></p>
