--- a/HCL.html
+++ b/HCL.html
@@ -104,6 +104,13 @@
 <p>R2rc1</p>
 <p>3.12.14-4</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/a5dspO8wRCU/RC12tcxtaCcJ">​David Kennedy</a></p>
+<p>Clevo W150ER<br /> (i7-3612QM, Ivy Bridge, Geforce GT 650M)</p>
+<p>4.6.5</p>
+<p>Yes</p>
+<p>No</p>
+<p>R2rc1</p>
+<p>3.12.14-4</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/YOE2ds6RVWc/n24INxfu11gJ">​chymian</a></p>
 <p>Dell Latitude E4300<br /> (P9600, GMA 4500MHD, Mobile 4 Series Chipset)</p>
 <p>A24</p>
 <p>Yes</p>
