--- a/HCL.html
+++ b/HCL.html
@@ -230,6 +230,15 @@
 <p><a href="https://groups.google.com/d/msg/qubes-devel/ZC_SQJhXVOM/4aLjEc7GIsUJ">​Stephen Boyd</a></p>
 <p>R2B2</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/ZC_SQJhXVOM/4aLjEc7GIsUJ">Stephen Boyd</a></p>
+<p>Lenovo IdeaPad Z500 Touch (20221)<br /> (i5-3230M, Ivy Bridge, HD Graphics)</p>
+<p>1.21</p>
+<p>Yes</p>
+<p>No</p>
+<p># best achievable QSL - (Qubes Security Level) --&gt;</p>
+<p>R2</p>
+<p>3.12.18-1</p>
+<p>Touchpad doesn't work during installer</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/6U_Qm3-Edg0/Aioi8lSBR3wJ">Rowan Crane</a></p>
 <p>Lenovo Thinkpad Edge E130<br /> (i3-3217U, Ivy Bridge, HD Graphics)</p>
 <p>2.05</p>
 <p>Yes</p>
