--- a/QubesDevelopers.html
+++ b/QubesDevelopers.html
@@ -16,7 +16,7 @@
 <li>Olivier Médoc <code>o_medoc at yahoo.fr</code> - core and gui fixes, template builder generalization (Arch Linux support)</li>
 <li>Timo Juhani Lindfors <code>timo.lindfors at iki.fi</code> - minor core cleanups</li>
 <li>Radoslaw Szkodzinski <code>astralstorm at gmail.com</code> - minor gui build fixes</li>
-<li>Zrubecz Laszlo <code>mail at zrubi.hu</code> -- HCL wiki page maintenance, HCL scripts</li>
+<li>László Zrubecz <code>mail at zrubi.hu</code> -- HCL wiki page maintenance, HCL scripts</li>
 <li>Vincent Penquerc'h <code>vincent.penquerch@collabora.co.uk</code> -- code review, misc fixes</li>
 <li>Wojciech Porczyk <code>wojciech@porczyk.eu</code> -- minor gui and core fixes</li>
 </ul>
