--- a/UserDoc.html
+++ b/UserDoc.html
@@ -37,6 +37,9 @@
 <li><a href="/wiki/wiki/DiskTRIM">Enabling TRIM for SSD disks</a></li>
 <li><a href="/wiki/wiki/DataLeaks">Understanding and Preventing Data Leaks</a></li>
 </ul>
+<ul>
+<li><a href="/wiki/wiki/Templates/FedoraMinimal">Templates: Fedora - minimal</a></li>
+</ul>
 <h2 id="Command-LineToolReferences">Command-Line Tool References</h2>
 <ul>
 <li><a href="/wiki/wiki/DomZeroTools">Dom0 Tools</a></li>
