--- a/HCL.html
+++ b/HCL.html
@@ -21,11 +21,11 @@
 <p>BIOS version</p>
 <p>Reported BIOS version</p>
 <p><a href="https://en.wikipedia.org/wiki/Hardware_virtual_machine">HVM</a></p>
-<p><a href="https://en.wikipedia.org/wiki/Intel_VT-x#Intel-VT-x">Intel VT-x</a> or <a href="https://en.wikipedia.org/wiki/AMD-V#AMD_virtualization_.28AMD-V.29">AMD-v</a> technology (required for running HVM domains, such as <a href="https://www.qubes-os.org/trac/wiki/WindowsAppVms">Windows-based AppVMs</a>)</p>
+<p><a href="https://en.wikipedia.org/wiki/Intel_VT-x#Intel-VT-x">Intel VT-x</a> or <a href="https://en.wikipedia.org/wiki/AMD-V#AMD_virtualization_.28AMD-V.29">AMD-v</a> technology (required for running HVM domains, such as <a href="https://wiki.qubes-os.org/trac/wiki/WindowsAppVms">Windows-based AppVMs</a>)</p>
 <p><a href="https://en.wikipedia.org/wiki/IOMMU">IOMMU</a></p>
 <p>Intel VT-d or AMD IOMMU technology (required for effective isolation of network VMs and <a href="http://wiki.xen.org/wiki/Xen_PCI_Passthrough">PCI passthrough</a>)</p>
 <p><a href="https://en.wikipedia.org/wiki/Trusted_Platform_Module">TPM</a></p>
-<p>TPM with proper BIOS support (required for <a href="https://www.qubes-os.org/trac/wiki/AntiEvilMaid">Anti Evil Maid</a>)</p>
+<p>TPM with proper BIOS support (required for <a href="https://wiki.qubes-os.org/trac/wiki/AntiEvilMaid">Anti Evil Maid</a>)</p>
 <p>Qubes version</p>
 <p>Reported Qubes version (R=Release, rc=release candidate, B=Beta, i.e.: R1, R2B1, R2rc1)</p>
 <p><a href="https://en.wikipedia.org/wiki/Dom0">dom0</a> <a href="https://en.wikipedia.org/wiki/Linux_kernel#Maintenance">kernel</a></p>
@@ -234,7 +234,6 @@
 <p>1.21</p>
 <p>Yes</p>
 <p>No</p>
-<p># best achievable QSL - (Qubes Security Level) --&gt;</p>
 <p>R2</p>
 <p>3.12.18-1</p>
 <p>Touchpad doesn't work during installer</p>
