--- a/BugReportingGuide.html
+++ b/BugReportingGuide.html
@@ -6,7 +6,7 @@
 <li>Search the issue tracker to see if your issue is already there - if so please cite the issue # in any comments you post.
 <ul>
 <li><a href="/wiki/search">Simple search</a></li>
-<li><a href="https://qubes-os.org/trac/query">​Advanced search</a></li>
+<li><a href="https://wiki.qubes-os.org/query?status=accepted&amp;status=assigned&amp;status=new&amp;status=reopened&amp;order=priority">​Advanced search</a></li>
 </ul></li>
 </ol>
 <ol start="2">
