--- a/QubesDevelopers.html
+++ b/QubesDevelopers.html
@@ -3,6 +3,7 @@
 <ul>
 <li>Joanna Rutkowska <code>joanna at invisiblethingslab dot com</code> - architecture &amp; project management, original core, occasional addons</li>
 <li>Marek Marczykowski <code>marmarek at invisiblethingslab dot com</code> - everything <a href="/wiki/wiki/Xen/Linux">Xen/Linux?</a> related :)</li>
+<li>Wojciech Porczyk <code>wojciech@porczyk.eu</code> -- various Linux-related things</li>
 </ul>
 <h2 id="Contributorstotheopensourcecode">Contributors to the open source code</h2>
 <p>(Roughly in chronology order:)</p>
@@ -18,7 +19,6 @@
 <li>Radoslaw Szkodzinski <code>astralstorm at gmail.com</code> - minor gui build fixes</li>
 <li>László Zrubecz <code>mail at zrubi.hu</code> -- HCL wiki page maintenance, HCL scripts</li>
 <li>Vincent Penquerc'h <code>vincent.penquerch@collabora.co.uk</code> -- code review, misc fixes</li>
-<li>Wojciech Porczyk <code>wojciech@porczyk.eu</code> -- minor gui and core fixes</li>
 </ul>
 <h2 id="Proprietarycodedevelopers">Proprietary code developers</h2>
 <ul>
