--- a/UserDoc/SplitGpg.html
+++ b/UserDoc/SplitGpg.html
@@ -1,8 +1,21 @@
-<h1 id="ConfiguringandusingSplitGPGinQubesOS">Configuring and using <em>Split GPG</em> in Qubes OS</h1>
-<h2 id="WhatisandwhytouseSplitGPGinsteadofstandardGPG">What is and why to use Split GPG instead of standard GPG?</h2>
-<h3 id="AdvanatgesofSplitGPGvs.traditionalGPG">Advanatges of Split GPG vs. traditional GPG</h3>
-<h3 id="AdvanatgesofSplitGPGvs.traditionalGPGwithasmartcard">Advanatges of Split GPG vs. traditional GPG with a smart card</h3>
+<h1 id="QubesSplitGPG">Qubes Split GPG</h1>
+<h2 id="WhatisSplitGPGandwhyshouldIuseitinsteadofthestandardGPG">What is Split GPG and why should I use it instead of the standard GPG?</h2>
+<p>Split GPG implements a concept similar to having a smart card with your private GPG keys, except that the role of the &quot;smart card&quot; plays another Qubes AppVM. This way one, not-so-trusted domain, e.g. the one where Thunderbird is running, can delegate all crypto operations, such as encryption/decryption and signing to another, more trusted, network-isolated, domain. This way a compromise of your domain where the Thunderbird or other client app is running -- arguably a not-so-unthinkable scenario -- does not allow the attacker to automatically also steal all your keys (we should make a rather obvious comment here that the so-often-used passphrases on private keys are pretty meaningless because the attacker can easily set up a simple backdoor which would wait until the user enters the passphrase and steal the key then).</p>
+<p>The diagram below presents the big picture of Split GPG architecture.</p>
+<p><a href="/wiki/attachment/wiki/UserDoc/SplitGpg/split-gpg-diagram.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;split-gpg-diagram.png&quot; attached to UserDoc/SplitGpg" alt="No image &quot;split-gpg-diagram.png&quot; attached to UserDoc/SplitGpg" /></a></p>
+<h3 id="AdvantagesofSplitGPGvs.traditionalGPGwithasmartcard">Advantages of Split GPG vs. traditional GPG with a smart card</h3>
+<p>It is often thought that the use of smart cards for private key storage guarantees ultimate safety. While this might be true (unless the attacker can find a usually-very-expensive-and-requiring-physical-presence way to extract the key from the smart card) but only with regards to the safety of the private key itself. However, there is usually nothing that could stop the attacker from requesting the smart card to perform decryption of all the user documents the attacker has found or need to decrypt. In other words, while protecting the user's private key is an important task, we should not forget that ultimately it is the user data that are to be protected and that the smart card chip has no way of knowing the requests to decrypt documents are now coming from the attacker's script and not from the user sitting in front of the monitor. (Similarly the smart card doesn't make the process of digitally signing a document or a transaction in any way more secure -- the user cannot know what the chip is really signing. Unfortunately this problem of signing reliability is not solvable by Split GPG)</p>
+<p>With Qubes Split GPG this problem is drastically minimized, because each time the key is to be used the user is asked for consent (with a definable time out, 5 minutes by default), plus is always notified each time the key is used via a tray notification from the domain where GPG backend is running. This way it would be easy to spot unexpected requests to decrypt documents.</p>
+<p><a href="/wiki/attachment/wiki/UserDoc/SplitGpg/r2-split-gpg-1.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;r2-split-gpg-1.png&quot; attached to UserDoc/SplitGpg" alt="No image &quot;r2-split-gpg-1.png&quot; attached to UserDoc/SplitGpg" /></a> <a href="/wiki/attachment/wiki/UserDoc/SplitGpg/r2-split-gpg-3.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;r2-split-gpg-3.png&quot; attached to UserDoc/SplitGpg" alt="No image &quot;r2-split-gpg-3.png&quot; attached to UserDoc/SplitGpg" /></a></p>
 <h3 id="Currentlimitations">Current limitations</h3>
-<h2 id="SettingupthevaultAppVMSplitGPGbackend">Setting up the <em>vault</em> AppVM (Split GPG backend)</h2>
-<h2 id="SettinguptheclientAppVMtousesplitGPGbackendfromvaultAppVM">Setting up the client AppVM to use split GPG backend from <em>vault</em> AppVM</h2>
-<h2 id="Importingpublickeys">Importing public keys</h2>
+<ul>
+<li>Current implementation requires importing of public keys to the vault domain. This opens up an avenue to attack the gpg running in the backend domain via a hypothetical bug in public key importing code. See this ticker #474 for more details and plans how to get around this problem.</li>
+</ul>
+<p></p>
+<ul>
+<li>It doesn't solve the problem of allowing the user to know what is to be signed before the operation gets approved. Perhaps the GPG backend domain could start a Disposable VM and have the to-be-signed document displayed there? To Be Determined.</li>
+</ul>
+<h2 id="ConfiguringandusingSplitGPG">Configuring and using Split GPG</h2>
+<h3 id="SettingupthevaultAppVMSplitGPGbackend">Setting up the <em>vault</em> AppVM (Split GPG backend)</h3>
+<h3 id="SettinguptheclientAppVMtousesplitGPGbackendfromvaultAppVM">Setting up the client AppVM to use split GPG backend from <em>vault</em> AppVM</h3>
+<h3 id="Importingpublickeys">Importing public keys</h3>
