--- a/UserDoc/SplitGpg.html
+++ b/UserDoc/SplitGpg.html
@@ -41,6 +41,10 @@ ssb   4096R/30498E2A 2012-11-15
 
 [user@work ~]$ qubes-gpg-client secret_message.txt.asc 
 (...)</code></pre>
-<p>However, when using Thunderbird with Enigmail extension it is not enough, because Thunderbird doesn't preserve the environment variables. Instead it is recommended to create a short script e.g. in the user home directory: ... and then point Enigmail to use this script instead of the standard GnuPG binary:</p>
+<p>However, when using Thunderbird with Enigmail extension it is not enough, because Thunderbird doesn't preserve the environment variables. Instead it is recommended to create a short script e.g. in the user home directory (name it e.g. <code>.qubes_gpg.sh</code> and make it executable):</p>
+<pre class="wiki"><code>#!/bin/bash
+export QUBES_GPG_DOMAIN=work-gpg
+exec qubes-gpg-client &quot;$@&quot;</code></pre>
+<p>... and then point Enigmail to use this script instead of the standard GnuPG binary:</p>
 <p><a href="/wiki/attachment/wiki/UserDoc/SplitGpg/tb-enigmail-split-gpg-settings.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;tb-enigmail-split-gpg-settings.png&quot; attached to UserDoc/SplitGpg" alt="No image &quot;tb-enigmail-split-gpg-settings.png&quot; attached to UserDoc/SplitGpg" /></a></p>
 <h3 id="Importingpublickeys">Importing public keys</h3>
