--- a/UserDoc/SplitGpg.html
+++ b/UserDoc/SplitGpg.html
@@ -31,6 +31,7 @@ ssb   4096R/30498E2A 2012-11-15
 <h3 id="ConfiguringtheclientappstousesplitGPGbackend">Configuring the client apps to use split GPG backend</h3>
 <p>Normally it should be enough to set the <code>QUBES_GPG_DOMAIN</code> to the GPG backend domain name and use <code>qubes-gpg-client</code> in place of <code>gpg</code>, e.g.:</p>
 <pre class="wiki"><code>[user@work ~]$ export QUBES_GPG_DOMAIN=work-gpg
+[user@work ~]$ gpg -K
 [user@work ~]$ qubes-gpg-client -K
 /home/user/.gnupg/secring.gpg
 -----------------------------
@@ -41,6 +42,7 @@ ssb   4096R/30498E2A 2012-11-15
 
 [user@work ~]$ qubes-gpg-client secret_message.txt.asc 
 (...)</code></pre>
+<p>Note that running normal <code>gpg -K</code> in the demo above shows no private keys stored in this AppVM.</p>
 <p>However, when using Thunderbird with Enigmail extension it is not enough, because Thunderbird doesn't preserve the environment variables. Instead it is recommended to create a short script e.g. in the user home directory (name it e.g. <code>.qubes_gpg.sh</code> and make it executable):</p>
 <pre class="wiki"><code>#!/bin/bash
 export QUBES_GPG_DOMAIN=work-gpg
