--- a/UserDoc.html
+++ b/UserDoc.html
@@ -31,7 +31,8 @@
 <li><a href="/wiki/wiki/UserDoc/DispVMCustomization">DispVM Customization</a></li>
 <li><a href="/wiki/wiki/LinuxHVMTips">Tips for Using Linux in an HVM</a></li>
 <li><a href="/wiki/wiki/FullScreenMode">Enabling Fullscreen Mode for AppVMs</a></li>
-<li><a href="/wiki/wiki/UserDoc/OpenPGP">Using OpenPGP in Qubes</a></li>
+<li><a href="/wiki/wiki/UserDoc/SplitGpg">Using GPG more securely in Qubes: Split GPG tutorial</a></li>
+<li><a href="/wiki/wiki/UserDoc/OpenPGP">Using OpenPGP in Qubes</a> (deprecated by <a href="/wiki/wiki/UserDoc/SplitGpg">UserDoc/SplitGpg</a>)</li>
 <li><a href="/wiki/wiki/ZFS">Installing ZFS in Qubes</a></li>
 <li><a href="/wiki/wiki/QubesService">Qubes service framework</a></li>
 <li><a href="/wiki/wiki/DiskTRIM">Enabling TRIM for SSD disks</a></li>
