--- a/Qrexec.html
+++ b/Qrexec.html
@@ -67,4 +67,4 @@ echo $(($arg1+$arg2)) # print to stdout - so, pass to the rpc client</code></pre
 </ul></li>
 <li>In the above step, if the target VM is <em>$dispvm</em>, the dispvm is created via the <em>qfile-daemon-dvm</em> program. The latter waits for the <em>qrexec-client</em> process to exit, and then destroys the dispvm.</li>
 </ul>
-<p><a href="/wiki/chrome/site/../../../site/qubes_rpc.png"><img src="/wiki/chrome/site/../../../site/qubes_rpc.png" title="qubes_rpc.png" alt="qubes_rpc.png" /></a></p>
+<p><a href="/wiki/attachment/wiki/Qrexec/qubes_rpc.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;qubes_rpc.png&quot; attached to Qrexec" alt="No image &quot;qubes_rpc.png&quot; attached to Qrexec" /></a></p>
