--- a/UserDoc.html
+++ b/UserDoc.html
@@ -40,6 +40,7 @@
 </ul>
 <ul>
 <li><a href="/wiki/wiki/Templates/FedoraMinimal">Templates: Fedora - minimal</a></li>
+<li><a href="/wiki/wiki/Templates/Debian">Templates: Debian</a></li>
 </ul>
 <h2 id="Command-LineToolReferences">Command-Line Tool References</h2>
 <ul>
